<resources>
    <string name="app_name">EletricCarApp</string>
    <string name="title">Eletric Car</string>
    <string name="cars">Carros</string>
    <string name="favorites">Favoritos</string>
    <string name="price">Preço</string>
    <string name="battery">Bateria</string>
    <string name="power">Potência</string>
    <string name="recharge">Recarga</string>
    <string name="price_kwh">Preço Kwh</string>
    <string name="km_traveled">Km Percorrido</string>
    <string name="calculate">Calcular</string>
    <string name="calculate_autonomy">Calcular Autonomia</string>
    <string name="no_wifi">Ops, internet não disponível ):</string>
    <string name="response_error">Algo deu errado, por favor tente novamente mais tarde</string>
    <string name="saved_calc">saved_calc</string>

    <string-array name="array_cities">
        <item>Araraquara</item>
        <item>Taquaringa</item>
        <item>São Paulo</item>
        <item>Salvador</item>
    </string-array>
</resources>